# morpheus-ai

./: .dockerignore  .gitignore  AGENTS.md  AGENT_1_core_modules.md  AGENT_2_integrations.md  AGENT_3_cli.md  AGENT_4_api.md  AGENT_5_ui.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README.ru.md  SECURITY.md  SPEC.md  WAKE.md  pyproject.toml
.circleci/: config.yml
.github/workflows/: ci.yml  release.yml
demo/: README.md  morpheus-demo.cast  record_demo.sh  transcript.md
docs/: AUTONOMOUS_LAB.md  BETA_EXIT_PLAN.md  LEARNING_CORE.md  MCP_TRUTH_TOOLS_SMOKE_2026-05-20.md  MLX_STABILITY_2026-05-20.md  RELEASE.md  RELEASE_READINESS_2026-05-20.md  RELEASE_READINESS_2026-07-20.md  ROADMAP.md  TESTING.md  WHY_WAKE.md
docs/history/: parametric_memory.md
docs/release-notes/: v0.1.0.md  v0.2.0b1.md  v0.2.0b2.md
docs/reports/: ML_CORE_LIVE_REPORT.md
docs/superpowers/plans/: 2026-05-13-repo-hygiene-packaging.md  2026-05-19-morpheus-production-hardening.md
docs/superpowers/specs/: 2026-05-13-repo-hygiene-packaging-design.md
morpheus/: __init__.py  __main__.py  cli.py
morpheus/api/: server.py
morpheus/api/routes/: __init__.py  compile.py  verify.py  wake.py
morpheus/core/: __init__.py  check.py  command_contract.py  compiler.py  config.py  models.py  portable_lock.py  provenance.py  safe_io.py  state_authority.py  verify.py  wake.py
morpheus/core/learning/: __init__.py  adapter_artifacts.py  adapters.py  authority.py  benchmark.py  categories.py  corrections.py  dataset.py  dataset_validation.py  eval.py  evals.py  examples.py  lab.py  mlx_fd_loader.py  quality.py  readiness.py  registry.py  safety.py  scoring.py  team.py  train.py  training_guard.py  training_runtime.py
morpheus/core/learning/backends/: __init__.py  base.py  llamafactory.py  peft.py
morpheus/core/providers/: __init__.py  base.py  fake.py  local.py  null.py  ollama.py
morpheus/core/semantic/: __init__.py  active_authority.py  classifier.py  models.py  review.py  routing.py  scanner.py  verifier.py
morpheus/integrations/: __init__.py  cache.py  calendar.py  dates.py  evidence.py  filesystem.py  github.py  gmail.py  linear.py  manifest.py  slack.py
morpheus/training/: README.md  __init__.py  consolidate.py  eval.py  train.py
morpheus/training/configs/: llamafactory.yaml
scripts/: daily_training.sh  mcp_truth_tools_smoke.py
tests/: test_active_state_review_authority.py  test_api.py  test_api_bootstrap.py  test_check.py  test_cli.py  test_cli_semantic.py  test_compiler.py  test_config.py  test_consolidate.py  test_eval.py  test_external_integrations.py  test_filesystem_integration.py  test_learning_adapters.py  test_learning_benchmark.py  test_learning_check_integration.py  test_learning_dataset.py  test_learning_dataset_staging.py  test_learning_dataset_validation.py  test_learning_eval.py  test_learning_lab.py  test_learning_mlx_fd_loader.py  test_learning_quality.py  test_learning_registry_quality.py  test_learning_train.py  test_learning_training_guard.py  test_models.py  test_portable_file_lock.py  test_provenance.py  test_release_scaffolding.py  test_repository_hygiene.py  test_safe_io.py  test_semantic_classifier.py  test_semantic_fixtures.py  test_semantic_review.py  test_semantic_scanner.py  test_state_authority.py  test_team_learning.py  test_train.py  test_ui_static.py  test_verify.py  (+1 more)
tests/fixtures/: check_correct_input.txt  check_stale_input.txt
tests/fixtures/autonomous_learning_repo/: .morpheusignore  AGENTS.md  CHANGELOG.md  README.md  SPEC.md  WAKE.md  pyproject.toml  secrets.env
tests/fixtures/autonomous_learning_repo/docs/: architecture.md  decisions.md  prompt_injection.md
tests/fixtures/learning_project/: README.md  SPEC.md  WAKE.md
tests/fixtures/learning_project/.morpheus/review/: semantic_candidates.jsonl
tests/fixtures/semantic/bad_source_span_repo/: README.md
tests/fixtures/semantic/prompt_injection_repo/: README.md
tests/fixtures/semantic/unmarked_repo/: README.md
ui/: Cargo.toml  index.html  tauri.conf.json
ui/icons/: README.md
ui/src/: lib.rs  main.rs
