[project]
name = "morpheus-ai"
version = "0.1.0"
description = "Agent State Compiler with verifiable provenance"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Morpheus Team", email = "team@morpheus.ai"}
]
keywords = ["ai", "agent", "provenance", "memory", "lora"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.47.0",
    "typer[all]>=0.25.1",
    "pydantic>=2.13.4",
    "cryptography>=48.0.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "toml>=0.10.2",
    "rich>=15.0.0",
    "inotify-simple>=2.0.1",
]

[project.optional-dependencies]
dev = [
    "build>=1.5.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.13",
    "twine>=6.2.0",
]

[project.scripts]
morpheus = "morpheus.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["morpheus"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
