[project]
name = "morpheus-wake"
version = "0.1.1"
description = "WAKE.md for AI agents: compile project state so agents stop starting cold"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Morpheus Team", email = "team@morpheus.ai"}
]
keywords = [
    "ai-agents",
    "agent-state",
    "wake-md",
    "mcp",
    "context-engineering",
    "provenance",
    "coding-agents",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "cryptography>=42.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "toml>=0.10.0",
    "rich>=13.0.0",
    "inotify-simple>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "twine>=5.0.0",
]

[project.scripts]
morpheus = "morpheus.cli:app"

[project.urls]
Homepage = "https://github.com/botAGI/morpheus-ai"
Repository = "https://github.com/botAGI/morpheus-ai"
Issues = "https://github.com/botAGI/morpheus-ai/issues"
Changelog = "https://github.com/botAGI/morpheus-ai/blob/main/CHANGELOG.md"
Release = "https://github.com/botAGI/morpheus-ai/releases/tag/v0.1.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["morpheus"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
