[project]
name = "morpheus-wake"
version = "0.2.0b1"
description = "Source-grounded truth layer for coding agents: verify project claims, compile WAKE.md, and run local learning experiments"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Morpheus Team", email = "team@morpheus.ai"}
]
keywords = [
    "ai-agents",
    "agent-state",
    "wake-md",
    "mcp",
    "context-engineering",
    "provenance",
    "coding-agents",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.47.0",
    "typer>=0.25.1",
    "pydantic>=2.13.4",
    "cryptography>=48.0.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "toml>=0.10.2",
    "rich>=15.0.0",
    "inotify-simple>=2.0.1",
]

[project.optional-dependencies]
dev = [
    "build>=1.5.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.14",
    "tomli>=2.0.0; python_version < '3.11'",
    "twine>=6.2.0",
]

[project.scripts]
morpheus = "morpheus.cli:app"

[project.urls]
Homepage = "https://github.com/botAGI/morpheus-ai"
Repository = "https://github.com/botAGI/morpheus-ai"
Issues = "https://github.com/botAGI/morpheus-ai/issues"
Changelog = "https://github.com/botAGI/morpheus-ai/blob/main/CHANGELOG.md"
Release = "https://github.com/botAGI/morpheus-ai/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["morpheus"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
