[package]
name = "morpheus-ui"
version = "0.1.0"
description = "Morpheus AI Desktop App"
authors = ["Morpheus Team"]
license = "MIT"
repository = "https://github.com/morpheus-ai/morpheus"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
